--- a/py/templates/footer_template.html
+++ b/py/templates/footer_template.html
@@ -1,27 +1,28 @@
-<footer class="footer text-dark p-3">
+<footer class="footer bg-dark text-light p-3">
     <div class="container">
         <div class="row justify-content-md-center py-2">
             <div class="col">
-                <p class="my-0" >Contact Info: </p>
-                <a href="#" class="text-muted"><img src=""><p class="my-0">Facebook account</p></a>
-                <a href="#" class="text-muted"><img src=""><p class="my-0">Facebook account</p></a>
-                <a href="#" class="text-muted"><img src=""><p class="my-0">Facebook account</p></a>
-                <a href="#" class="text-muted"><img src=""><p class="my-0">Facebook account</p></a>
-                <a href="#" class="text-muted"><img src=""><p class="my-0">Facebook account</p></a>
+                <p class="my-0" >Social Media</p>
+                <a href="https://twitter.com/thekhronosgroup" class="fa fa-twitter text-light"></a>
+                <a href="#" class="fa fa-youtube text-light"></a>
             </div>
 
             <div class="col mb-3">
                 <p class="my-0 mb-3">Sitemap</p>
 
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a href="#" class="text-muted">Home</a></li>
-                    <li class="nav-item"><a href="#" class="text-muted">About</a></li>
-                    <li class="nav-item"><a href="#" class="text-muted">Gallery</a></li>
-                    <li class="nav-item"><a href="#" class="text-muted">Publications</a></li>
-                    <li class="nav-item"><a href="#" class="text-muted">News</a></li>
-                    <li class="nav-item"><a href="#" class="text-muted">Events</a></li>
-                    <li class="nav-item"><a href="#" class="text-muted">Contact Us</a></li>
-                    <li class="nav-item"><a href="#" class="text-muted">Apply Now</a></li>
+                    <li class="nav-item"><a href="index.html" class="text-muted">Home</a></li>
+                    <li class="nav-item"><a href="about.html" class="text-muted">About</a></li>
+                    <li class="nav-item"><a href="#" class="text-muted">Resources</a>
+                        <ul class="navbar-nav ">
+                            <li class="nav-item"><a href="pipeline.html" class="text-muted">OpenGL Rendering Pipeline</a>
+                            <li class="nav-item"><a href="glut.html" class="text-muted">OpenGL Utility Libraries</a>
+                            <li class="nav-item"><a href="perfbench.html" class="text-muted">OpenGL Performance Benchmarks</a>
+                            <li class="nav-item"><a href="faq.html" class="text-muted">Frequently Asked Questions</a>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a href="news.html" class="text-muted">News</a></li>
+                    <li class="nav-item"><a href="contact.html" class="text-muted">Contact Us</a></li>
                 </ul>
             </div>
 
@@ -33,6 +34,7 @@
 
             <div class="col ">
                 <p>Other Contact Info:</p>
+                <img src="img/khronos-logo-inverted.svg" class="my-3" width="100%">
                 <p class="text-muted">
                 9450 SW Gemini Drive #45043
                 Beaverton, OR 97008-6018 USA<br/>
