--- a/py/templates/footer_template.html
+++ b/py/templates/footer_template.html
@@ -3,8 +3,8 @@
         <div class="row justify-content-md-center py-2">
             <div class="col">
                 <p class="my-0" >Social Media</p>
-                <a href="https://twitter.com/thekhronosgroup" class="fa fa-twitter text-light"></a>
-                <a href="#" class="fa fa-youtube text-light"></a>
+                <a href="https://twitter.com/thekhronosgroup" class="m-2 fa fa-twitter p-3 bg-dark text-light"></a>
+                <a href="https://www.youtube.com/user/khronosgroup" class="m-2 fa fa-youtube p-3 bg-dark text-light"></a>
             </div>
 
             <div class="col mb-3">
