changed colors and spacing

--- a/py/templates/nav_template.html
+++ b/py/templates/nav_template.html
@@ -1,10 +1,10 @@
 <header>
-    <nav id="nav_bar" class="navbar fixed-top navbar-light navbar-expand-md bg-light shadow-sm">
-        <a class="navbar-brand" href="#">
-            <img src="img/Khronos_logo.svg" height="30" class="align-bottom">
+    <nav id="nav_bar" class="navbar fixed-top navbar-dark navbar-expand-md bg-dark text-light shadow-sm">
+        <a class="navbar-brand" href="index.html">
+            <img src="img/khronos-logo-inverted.svg" height="40" class="align-bottom">
         </a>
 
-        <button class="navbar-toggler bg-light navbar-light" type="button" data-toggle="collapse" data-target="#main-nav">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav">
             <span class="navbar-toggler-icon"></span>
         </button>
         
