--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,6 @@ area {
     border-bottom: 2px solid #ededed;
 }
 
-
 .bg-white {
     background-color: #efefef;
 }
@@ -88,5 +87,21 @@ area {
     background-color: #f5f5f5;
 
     font-size: 14px;
+}
+
+.translucent-nav #nav_bar, .translucent-nav .navbar-nav .dropdown-menu {
+    background: rgba(51, 51, 51, 0.65) !important;
+}
+
+#nav_bar nav ul li a, .footer ul li a, .footer p{
+    color: #eee !important;
+}
+
+.dropdown-item:hover { 
+    background: #222 !important;
+}
+
+#nav_bar, .navbar-nav .dropdown-menu, .footer {
+    background: #333 !important;
 }
 
